[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloud_lint"]

[project]
name = "cloud-lint"
version = "1.0.0"
description = "Offline cloud-init execution blueprint visualizer"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "typer>=0.12.0",
    "ruamel.yaml>=0.18.0",
    "jsonschema>=4.22.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-cov", "mypy"]

[project.scripts]
cloud-lint = "cloud_lint.cli:app"

[tool.uv]
dev-dependencies = ["pytest>=8.2.0", "pytest-cov>=5.0.0", "mypy>=1.10.0"]
